# telemetry-service

./: .gitignore  Cargo.toml  Dockerfile  FEATURES.md  MIGRATION.md  Makefile  PODMAN.md  PROMETHEUS_INTEGRATION.md  QUICKSTART.md  README.md  com.telemetry.service.plist  config.example.toml  podman-compose.yml  telemetry-service.service
prometheus/: README.md  alerts.yml  prometheus.yml
src/: main.rs  otlp_example.rs
tests/: integration_test.rs
