[package]
name = "telemetry-service"
version = "0.1.0"
edition = "2021"

[dependencies]
opentelemetry = "0.22"
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.15", features = ["grpc-tonic"] }
opentelemetry-stdout = { version = "0.3" }
opentelemetry-prometheus = "0.15"
prometheus = "0.13"
sysinfo = "0.30"
tokio = { version = "1.36", features = ["full"] }
axum = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-opentelemetry = "0.23"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hostname = "0.3"
chrono = "0.4"
tower = "0.4"
btleplug = "0.11"
uuid = "1"
